# fertilized-forests

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.MD  SConscript.py  SConstruct  appveyor.yml  build_release.bat  compile.bat  compile.sh  cppcheck.supp  fertilized-forests.files  fertilized-forests.includes  fertilized.sln  license.txt  setup_environment.bat  setup_environment.sh  setup_environment_linux.py  setup_environment_windows.py  setup_paths.bat  version.py
bindings/matlab/: CMakeLists.txt  ObjectVector.cpp  StringVector.cpp
bindings/matlab/exporters/: __AdaBoost_0.cpp  __AdaBoost_1.cpp  __AdaBoost_2.cpp  __AdaBoost_3.cpp  __AdaBoost_4.cpp  __AdaBoost_5.cpp  __AlignedSurfaceCalculator_0.cpp  __AlignedSurfaceCalculator_1.cpp  __AlignedSurfaceCalculator_2.cpp  __AlignedSurfaceCalculator_3.cpp  __AlignedSurfaceCalculator_4.cpp  __AlignedSurfaceCalculator_5.cpp  __AlternatingThresholdOptimizer_0.cpp  __AlternatingThresholdOptimizer_1.cpp  __AlternatingThresholdOptimizer_10.cpp  __AlternatingThresholdOptimizer_11.cpp  __AlternatingThresholdOptimizer_2.cpp  __AlternatingThresholdOptimizer_3.cpp  __AlternatingThresholdOptimizer_4.cpp  __AlternatingThresholdOptimizer_5.cpp  __AlternatingThresholdOptimizer_6.cpp  __AlternatingThresholdOptimizer_7.cpp  __AlternatingThresholdOptimizer_8.cpp  __AlternatingThresholdOptimizer_9.cpp  __BoostedTraining_0.cpp  __BoostedTraining_1.cpp  __BoostedTraining_2.cpp  __BoostedTraining_3.cpp  __BoostedTraining_4.cpp  __BoostedTraining_5.cpp  __BoostingLeafManager_0.cpp  __BoostingLeafManager_1.cpp  __BoostingLeafManager_2.cpp  __BoostingLeafManager_3.cpp  __BoostingLeafManager_4.cpp  __ClassicTraining_0.cpp  __ClassicTraining_1.cpp  __ClassicTraining_2.cpp  __ClassicTraining_3.cpp  __ClassicTraining_4.cpp  (+232 more)
bindings/matlab/fertilized/: ObjectVector.m  Result_Types.m  Soil.m  StringVector.m
bindings/matlab/matlab_headers/: __bagging.h  __boosting.h  __data_providers.h  __deciders.h  __execution_strategies.h  __feature_extraction.h  __features.h  __functions_feature_extraction.h  __functions_standard_forests.h  __functions_standard_trees.h  __gains.h  __impurities.h  __leafs.h  __regression.h  __rootdir.h  __threshold_optimizers.h  __trainings.h  matlab.h  objectvector.h
bindings/python/: .spyderproject  CMakeLists.txt  global.h  pyfertilized_0.cpp  pyfertilized_1.cpp  pyfertilized_2.cpp  pyfertilized_3.cpp  pyfertilized_4.cpp  pyfertilized_5.cpp  pyfertilized_6.cpp  pyfertilized_mf.cpp  pyfertilized_vec.cpp  setup.py  setup.py.in  util.h
bindings/python/exporters/: __0_exporter.cpp  __100_exporter.cpp  __101_exporter.cpp  __102_exporter.cpp  __103_exporter.cpp  __104_exporter.cpp  __105_exporter.cpp  __106_exporter.cpp  __107_exporter.cpp  __108_exporter.cpp  __109_exporter.cpp  __10_exporter.cpp  __110_exporter.cpp  __111_exporter.cpp  __112_exporter.cpp  __113_exporter.cpp  __114_exporter.cpp  __115_exporter.cpp  __116_exporter.cpp  __117_exporter.cpp  __118_exporter.cpp  __119_exporter.cpp  __11_exporter.cpp  __120_exporter.cpp  __121_exporter.cpp  __122_exporter.cpp  __123_exporter.cpp  __124_exporter.cpp  __125_exporter.cpp  __126_exporter.cpp  __127_exporter.cpp  __128_exporter.cpp  __129_exporter.cpp  __12_exporter.cpp  __130_exporter.cpp  __131_exporter.cpp  __132_exporter.cpp  __133_exporter.cpp  __134_exporter.cpp  __135_exporter.cpp  (+334 more)
bindings/python/exporters_mod_funcs/: __export_module_function_0.cpp  __export_module_function_1.cpp  __export_module_function_10.cpp  __export_module_function_11.cpp  __export_module_function_12.cpp  __export_module_function_13.cpp  __export_module_function_14.cpp  __export_module_function_15.cpp  __export_module_function_16.cpp  __export_module_function_17.cpp  __export_module_function_2.cpp  __export_module_function_3.cpp  __export_module_function_4.cpp  __export_module_function_5.cpp  __export_module_function_6.cpp  __export_module_function_7.cpp  __export_module_function_8.cpp  __export_module_function_9.cpp  export_module_functions.h
bindings/python/exporters_vec_types/: __vec_exporter_0.cpp  __vec_exporter_1.cpp  __vec_exporter_10.cpp  __vec_exporter_11.cpp  __vec_exporter_12.cpp  __vec_exporter_13.cpp  __vec_exporter_14.cpp  __vec_exporter_15.cpp  __vec_exporter_16.cpp  __vec_exporter_17.cpp  __vec_exporter_18.cpp  __vec_exporter_19.cpp  __vec_exporter_2.cpp  vec_exporter.h  (+14 more)
documentation/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  SConscript.py  documentation.vcxproj  documentation.vcxproj.filters  header.html  matfertilized.pptx
examples/c++/: CMakeLists.txt  boosting.cpp  custom.cpp  overview.cpp  regression.cpp
include/: CMakeLists.txt
include/fertilized/: default_values.h  fertilized.h  fertilized_fwd.h  forest.h  global.h  ndarray.h  ndarray_fwd.h  soil.h  tree.h  types.h  version.h.in
src/: CMakeLists.txt  fertilized.cpp
src/feature_extraction/: dnnfeatureextractor.cpp  feature_extraction.cpp  hog_extractor.cpp
src/serialization/: __serialize_0.cpp  __serialize_1.cpp  __serialize_10.cpp  __serialize_100.cpp  __serialize_101.cpp  __serialize_102.cpp  __serialize_103.cpp  __serialize_104.cpp  __serialize_105.cpp  __serialize_106.cpp  __serialize_107.cpp  __serialize_108.cpp  __serialize_109.cpp  __serialize_11.cpp  __serialize_110.cpp  __serialize_111.cpp  __serialize_112.cpp  __serialize_113.cpp  __serialize_114.cpp  __serialize_115.cpp  __serialize_116.cpp  __serialize_117.cpp  __serialize_118.cpp  __serialize_119.cpp  __serialize_12.cpp  __serialize_120.cpp  __serialize_121.cpp  __serialize_122.cpp  __serialize_123.cpp  __serialize_124.cpp  __serialize_125.cpp  __serialize_126.cpp  __serialize_127.cpp  __serialize_128.cpp  __serialize_129.cpp  __serialize_13.cpp  __serialize_130.cpp  __serialize_131.cpp  __serialize_132.cpp  __serialize_133.cpp  (+254 more)
src/util/: gil.cpp
tests/: CMakeLists.txt  DNNFeatureExtractor.cpp  boosting.cpp  dnn_feature_extraction.cpp  forest.cpp  forest.h  gain.cpp  netspec.prototxt  netweights.prototxt  regression_calculator.cpp  test.cpp  test_template.cpp  threshold_decider.cpp  threshold_optimizer.cpp  trees.cpp  util.cpp
(+393 files in other folders)
